# bakeit

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
bakeit/: __init__.py  __main__.py  cli.py  tests.py  uploader.py
